# circle_of_life

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/entity/: entity.cpp  entity.h
src/evolution/: evolution.cpp  evolution.h
src/gui/: gui.cpp  gui.h
src/headers/: coordinates.h
src/map/: map.cpp  map.h
src/simulation/: simulation.cpp  simulation.h
